--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,7 @@
+<%
+=begin
+%>
+
 <h1>タスク一覧</h1>
 
 <ul>
@@ -7,3 +11,12 @@
 </ul>
 
 <%= link_to '新規タスクの投稿', new_task_path %>
+<%
+=end
+%>
+
+<div class="center jumbotron">
+  <div class="text-center">
+    <h1>Welcome to the Tasklist</h1>
+  </div>
+</div>
