--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,22 +1,40 @@
 <%
 =begin
 %>
+  <div class="row">
+    <aside class="col-sm-4">
+      <%= form_with(model: @task, local: true) do |f| %>
+        <div class="form-group">
+          <%= f.text_area :content, class: 'form-control', rows: 5 %>
+        </div>
+        <%= f.submit 'Task', class: 'btn btn-primary btn-block' %>
+      <% end %>
+    </aside>
+    <div class="col-sm-8">
+      <%= render 'tasks/tasks', tasks: @tasks %>
+    </div>
+  </div>
 
-<h1>タスク一覧</h1>
-
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.content %> &gt; <%= task.status %></li>
-  <% end %>
-</ul>
-
-<%= link_to '新規タスクの投稿', new_task_path %>
 <%
 =end
 %>
 
-<div class="center jumbotron">
-  <div class="text-center">
-    <h1>Welcome to the Tasklist</h1>
+<% if logged_in? %>
+  <h1>タスク一覧</h1>
+  
+  <ul>
+    <% @tasks.each do |task| %>
+      <li><%= link_to task.id, task %> : <%= task.content %> &gt; <%= task.status %></li>
+    <% end %>
+  </ul>
+  <%= link_to '新規タスクの投稿', new_task_path %>
+<% else %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1>Welcome to the Tasklist</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
   </div>
-</div>
+<% end %>
+
+
