--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,10 @@
 <h1>id: <%= @task.id %> のタスク詳細ページ</h1>
 
-<p>タスク: <%= @task.content %></p>
-<p>ステータス: <%= @task.status %></p>
+<% if @task.user_id == session[:user_id] %>
+    <p>タスク: <%= @task.content %></p>
+    <p>ステータス: <%= @task.status %></p>
 
+    <%= link_to 'このタスクを編集する', edit_task_path(@task) %>
+    <%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<% end %>
 <%= link_to '一覧に戻る', tasks_path %>
-<%= link_to 'このタスクを編集する', edit_task_path(@task) %>
-<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
